[package]
name = "terrain-experiment"
version = "0.1.0"
authors = ["circuit8"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "bevy-main" }
bevy_flycam = { git = "https://github.com/Circuit8/bevy_flycam" }
noise = "0.7"
rand = "0.8"
color-eyre = "0.5.11"
image = "0.23.14"
futures-lite = "1.12.0"
derive_more = "0.99.14"
nalgebra-glm = "0.15.0"

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/dynamic"
]

[profile.dev.package."*"]
opt-level = 2