[package]
name = "terrain-experiment"
version = "0.1.0"
authors = ["circuit8"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy-inspector-egui = "*"
bevy_rapier3d = "*"
noise = "0.7"
rand = "0.8"
color-eyre = "0.5.11"
image = "0.23.14"
futures-lite = "1.12.0"
derive_more = "0.99.14"
nalgebra-glm = "0.15.0"

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/dynamic"
]

[profile.dev.package."*"]
opt-level = 3