[package]
name = "terrain-experiment"
version = "0.1.0"
authors = ["circuit8"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy-inspector-egui = "*"
bevy_rapier3d = { version = "*", features=["render"] }
noise = "0.7"
rand = "0.8"
color-eyre = "0.5.11"
image = "0.23.14"
futures-lite = "1.12.0"
derive_more = "0.99.14"
nalgebra-glm = "0.15.0"
bevy_prototype_character_controller = { git = "https://github.com/superdump/bevy_prototype_character_controller" }

[profile.dev]
opt-level = 3

[features]
default = [
    "bevy/dynamic"
]

[profile.dev.package."*"]
opt-level = 3